[package]
name = "escape_from_tarkov_multi"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3